# Fishnet

./: .gitignore  .gitmodules  LICENSE.txt  README.md  build.gradle.kts  disasm_external.patch  external.patch  fishnet_external.patch  fix_libziparchive_branch.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  lib.c  lib.cpp  unique_fd.h
app/src/main/java/com/kyant/fishnet/demo/: CrashFragment.kt  CrashingTestFragment.kt  DisAsmFragment.kt  FishnetApp.kt  JavaCrashReporterActivity.kt  LogFragment.kt  LoggingConfig.kt  LogsFragment.kt  MainActivity.kt  MaterialButton.kt  MaterialCard.kt  RawLogFragment.kt  SettingsFragment.kt  TestingCrashFragment.kt
app/src/main/java/com/kyant/fishnet/demo/ui/: FishnetTheme.kt  MaterialButton.kt  MaterialCard.kt  MaterialSpinnerContainer.kt  MonospacedText.kt  Tag.kt
app/src/main/res/font-v26/: jetbrains_mono.xml
app/src/main/res/layout/: activity_java_crash_reporter.xml  activity_main.xml  bad_layout.xml  fragment_crash.xml  fragment_disasm.xml  fragment_log.xml  fragment_logs.xml  fragment_raw_log.xml  fragment_settings.xml  fragment_testing_crash.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-night-v23/: themes.xml
app/src/main/res/values-night-v27/: themes.xml
app/src/main/res/values-night-v31/: colors.xml
app/src/main/res/values-v23/: themes.xml
app/src/main/res/values-v27/: themes.xml
app/src/main/res/values-v31/: colors.xml
disasm/: build.gradle.kts  consumer-rules.pro
disasm/src/main/cpp/: CMakeLists.txt  disasm.c
disasm/src/main/java/com/kyant/disasm/: DisAsm.kt  Instruction.kt
fishnet/: build.gradle.kts  consumer-rules.pro
fishnet/src/main/cpp/: CMakeLists.txt  abi.cpp  abi.h  abort_message.cpp  abort_message.h  anr.cpp  anr.h  anr_signal_handler.cpp  anr_signal_handler.h  backtrace.cpp  backtrace.h  cause.cpp  cause.h  clock.cpp  clock.h  command_line.cpp  command_line.h  debugger_thread_info.h  dump.cpp  dump.h  duration.h  fd.cpp  fd.h  fds.cpp  fds.h  fishnet.cpp  human_readable.cpp  human_readable.h  java_dump.cpp  java_dump.h  log.cpp  log.h  log_header.cpp  log_header.h  logcat.cpp  logcat.h  memory.cpp  memory.h  process.cpp  process.h  (+13 more)
fishnet/src/main/cpp/include/fishnet/: fishnet.h
fishnet/src/main/java/androidx/annotation/: NonNull.java  Nullable.java
fishnet/src/main/java/com/kyant/fishnet/: Fishnet.java  Fishnet.kt  FishnetLog.kt  FishnetLogParser.kt  JavaCrashReporterActivity.kt  JavaExceptionHandler.java  JavaExceptionHandler.kt  NativeSignalHandler.java  NativeSignalHandler.kt
fishnet/src/main/res/layout/: activity_java_crash_reporter.xml
gradle/: libs.versions.toml
